<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<name>ClearCheckBookJavaApi</name>
	<version>1.4-SNAPSHOT</version>
	<url>https://sourceforge.net/projects/clearcheckbookjavaapi</url>
	<description>A Java library to access the HTTP developer API for
		Clearcheckbook.com, the money management website.
	</description>
	<groupId>com.leonarduk</groupId>
	<artifactId>clearcheckbookapi</artifactId>
	<properties>
		<maven.test.failure.ignore>true</maven.test.failure.ignore>
		<maven.test.skip>false</maven.test.skip>
		<java.version>11</java.version>
		<!-- dependencies checked at http://search.maven.org/ 2014-02-11 -->
		<htmlunit.version>2.33</htmlunit.version>
		<log4j.version>1.2.17</log4j.version>
		<jacoco.version>0.8.3</jacoco.version>
		<jackson-mapper-asl.version>1.9.13</jackson-mapper-asl.version>
		<guava.version>27.0.1-jre</guava.version>
		<junit.version>4.13-beta-2</junit.version>
		<maven.verion>2.2.1</maven.verion>
		<!-- Plugins -->
		<maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
		<maven-site-plugin.version>3.3</maven-site-plugin.version>
		<maven-javadoc-plugin.version>2.9.1</maven-javadoc-plugin.version>
		<maven-surefire-plugin.version>2.16</maven-surefire-plugin.version>
		<maven-project-info-reports-plugin.version>2.7
		</maven-project-info-reports-plugin.version>
		<taglist-maven-plugin.version>2.4</taglist-maven-plugin.version>
		<maven-clover-plugin.version>3.2.0</maven-clover-plugin.version>
		<maven-javadoc-plugin.version>2.9.1</maven-javadoc-plugin.version>
		<maven-pmd-plugin.version>3.0.1</maven-pmd-plugin.version>
		<maven-changes-plugin.version>2.9</maven-changes-plugin.version>
		<versions-maven-plugin.version>2.7</versions-maven-plugin.version>
 
	</properties>
	<repositories>
		<repository>
			<id>central.maven.org</id>
			<url>http://central.maven.org/maven2/</url>
		</repository>
	</repositories>
	<dependencies>
		<!-- For connecting to websites -->
		<dependency>
			<groupId>net.sourceforge.htmlunit</groupId>
			<artifactId>htmlunit</artifactId>
			<version>${htmlunit.version}</version>
		</dependency>
		<!-- For Logger -->
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>${log4j.version}</version>
		</dependency>
		<!-- For mapping JSON to classes -->
		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-mapper-asl</artifactId>
			<version>${jackson-mapper-asl.version}</version>
		</dependency>
		<!-- Various utils - currently using String utils like Joiner -->
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>${guava.version}</version>
		</dependency>
		<!-- For test -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
		</dependency>
		<dependency>
			<groupId>org.jacoco</groupId>
			<artifactId>jacoco-maven-plugin</artifactId>
			<version>${jacoco.version}</version>
			<type>maven-plugin</type>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<!-- To create an executable jar -->
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<mainClass>com.leonarduk.clearcheckbook.ClearCheckBookClient
							</mainClass>
						</manifest>
					</archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.9</version>
				<configuration>
					<downloadSources>true</downloadSources>
					<downloadJavadocs>true</downloadJavadocs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.3</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.9</version>
				<configuration>
					<downloadSources>true</downloadSources>
					<downloadJavadocs>true</downloadJavadocs>
				</configuration>
			</plugin>

			<!-- for compiling code in Maven -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<!-- For running tests with Maven -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
			</plugin>
			<!-- For generating javadoc for website -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>${maven-javadoc-plugin.version}</version>
				<configuration>
					<show>private</show>
					<nohelp>true</nohelp>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<excludes>
						<exclude>uk/co/sleonard/unison/gui/*.class</exclude>
						<exclude>uk/co/sleonard/unison/gui/generated/*.class</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.9.1</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>${maven-project-info-reports-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>${maven-site-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>${maven-javadoc-plugin.version}</version>
			</plugin>
			<!-- 2005 <plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>jxr-maven-plugin</artifactId> 
				</plugin> -->
			<!-- 2009 <plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>taglist-maven-plugin</artifactId> 
				<version>${taglist-maven-plugin.version}</version> </plugin> -->
			<plugin>
				<groupId>com.atlassian.maven.plugins</groupId>
				<artifactId>maven-clover2-plugin</artifactId>
				<version>${maven-clover-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>${maven-pmd-plugin.version}</version>
				<configuration>
					<targetjdk>${java.version}</targetjdk>
					<format>xml</format>
					<linkXref>true</linkXref>
					<sourceEncoding>utf-8</sourceEncoding>
					<minimumTokens>100</minimumTokens>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>${versions-maven-plugin.version}</version>
				<configuration>
					<generateBackupPoms>false</generateBackupPoms>
				</configuration>
			</plugin>

		</plugins>
	</reporting>
	<distributionManagement>
		<site>
			<id>clearcheckbookjavaapi.sourceforge.net</id>
			<url>sftp://leonarduk,clearcheckbookjavaapi@web.sourceforge.net:/home/project-web/clearcheckbookjavaapi/htdocs
			</url>
		</site>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/
			</url>
		</repository>
	</distributionManagement>
	<mailingLists>
		<mailingList>
			<name>JWebUnit Development Mailing list</name>
			<subscribe>https://lists.sourceforge.net/lists/listinfo/clearcheckbookjavaapi-updates
			</subscribe>
			<unsubscribe>https://lists.sourceforge.net/lists/listinfo/clearcheckbookjavaapi-updates
			</unsubscribe>
			<archive>https://sourceforge.net/p/clearcheckbookjavaapi/mailman/clearcheckbookjavaapi-updates
			</archive>
			<post>jwebunit-development@lists.sourceforge.net</post>
		</mailingList>
	</mailingLists>
	<issueManagement>
		<system>SourceForge2</system>
		<url>https://sourceforge.net/p/clearcheckbookjavaapi/tickets/</url>
	</issueManagement>
	<organization>
		<name>Leonard UK Ltd</name>
		<url>http://leonarduk.com</url>
	</organization>
	<inceptionYear>2014</inceptionYear>
	<licenses>
		<license>
			<name>GNU General Public License v3.0 or later</name>
			<url>http://www.spdx.org/licenses/GPL-3.0+</url>
		</license>
	</licenses>
	<profiles>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.1</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	<developers>
		<developer>
			<id>leonarduk</id>
			<name>Stephen Leonard</name>
			<email>github@leonarduk.com</email>
			<roles>
				<role>Project Manager</role>
				<role>Architect</role>
				<role>Developer</role>
			</roles>
			<organization>Leonard UK Ltd</organization>
			<organizationUrl>http://leonarduk.com</organizationUrl>
			<timezone>0</timezone>
			<url>http://uk.linkedin.com/in/steveleonard/</url>
		</developer>
	</developers>
	<scm>
		<connection>scm:git:git@github.com:leonarduk/clearcheckbookapi.git
		</connection>
		<developerConnection>scm:git:git@github.com:leonarduk/clearcheckbookapi.git
		</developerConnection>
		<url>git@github.com:leonarduk/clearcheckbookapi.git</url>
	</scm>
</project>
